Multi-ingress/dep.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: my-ns


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: ingress-nginx 
  labels:
    app: web-admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-admin
  template:
    metadata:
      labels:
        app: web-admin
    spec:
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:prakhar
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: ingress-nginx
spec:
  selector:
    app: web-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP






# ************************************************

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: ingress-nginx
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:app1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: ingress-nginx
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP



# ******************************************************************************


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: ingress-nginx
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:app2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: ingress-nginx
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
