Multi-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-api-ingress
  namespace: ingress-nginx
  # annotations:
  #     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/app1
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

          - path: /api/app2
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
